force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/AVA_B2BLEX__AvaTaxStoreSetting__c.object-meta.xml
<CustomObject>
    <label>AvaTax Store Setting</label>
    <nameField>
        <displayFormat>Store-{0000}</displayFormat>
        <label>AvaTaxStoreSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AvaTax Store Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>