force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__CompanyId__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__CompanyId__c</fullName>
    <label>Company Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>