force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__Country__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Country__c</fullName>
    <label>Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>