force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>