force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__Region__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Region__c</fullName>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>