force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__StoreId__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__StoreId__c</fullName>
    <label>Store Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>