force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__StoreName__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__StoreName__c</fullName>
    <label>Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>