force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__StoreType__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__StoreType__c</fullName>
    <label>Store Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>