force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__Street2__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Street2__c</fullName>
    <label>Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>