force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__Street__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Street__c</fullName>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>