force-app/main/default/objects/AVA_B2BLEX__AvaTaxStoreSetting__c/fields/AVA_B2BLEX__TaxInclusive__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__TaxInclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Inclusive</label>
    <type>Checkbox</type>
</CustomField>